fix invisible indicator

--- a/src/test/commands.scss
+++ b/src/test/commands.scss
@@ -348,6 +348,8 @@
 
   .command-invisible {
     display: none;
+    margin-left: 3px;
+    margin-right: 0;
   }
 
   .command-is-invisible .command-invisible {
